CREATE TABLE product
(
    product_id  UUID PRIMARY KEY,
    category_id UUID         NOT NULL REFERENCES category (category_id) ON DELETE RESTRICT,
    version     BIGINT       NOT NULL DEFAULT 0,
    brand       VARCHAR(500),
    name        VARCHAR(255) NOT NULL,
    color_hex   VARCHAR(7),
    created_at  TIMESTAMP,
    updated_at  TIMESTAMP
);

CREATE INDEX idx_product_category ON product (category_id);