erDiagram
    %% Source of truth: src/main/resources/db/migration (V1-V5).
    %% Note: product_user.user_id has NO database FK constraint; the link to "user" is logical only.

    category ||--o{ product : "categorizes"
    product ||--o{ product_user : "collected in"
    product_user ||--o{ review : "receives"
    "user" ||--o{ product_user : "collects"

    category {
        UUID category_id PK
        BIGINT version "NOT NULL"
        VARCHAR name
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    "user" {
        UUID user_id PK
        VARCHAR token "NOT NULL, UNIQUE"
        BIGINT version "NOT NULL"
        VARCHAR email
        VARCHAR name
        TIMESTAMP created_at "NOT NULL"
        TIMESTAMP updated_at
    }

    product {
        UUID product_id PK
        UUID category_id FK "NOT NULL, references category"
        BIGINT version "NOT NULL"
        VARCHAR brand
        VARCHAR name "NOT NULL"
        VARCHAR color_hex
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    product_user {
        UUID product_user_id PK
        BIGINT version "NOT NULL"
        UUID user_id "NOT NULL, logical reference"
        UUID product_id FK "NOT NULL, references product"
        TIMESTAMP deleted_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    review {
        UUID review_id PK
        UUID product_user_id FK "NOT NULL, references product_user"
        BIGINT version "NOT NULL"
        INTEGER rating "NOT NULL"
        VARCHAR comment "NOT NULL"
        TIMESTAMP created_at
        TIMESTAMP updated_at
        TIMESTAMP deleted_at
    }
